fix: mobile nav visibility

--- a/src/components/nav/nav.module.css
+++ b/src/components/nav/nav.module.css
@@ -89,7 +89,6 @@
 	background: var(--light-accent);
 	border: 1px solid var(--color-accent-3);
 	border-radius: 50px;
-	display: flex;
 	transition: box-shadow 0.15s ease-in;
 
 	& svg {
